--- a/DigitalPet/app/src/main/res/values/strings.xml
+++ b/DigitalPet/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="base_url">http://10.0.2.2:8000/</string>
     <string name="app_name">Digital Pet</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
