--- a/DigitalPet/app/src/main/res/values/strings.xml
+++ b/DigitalPet/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="name">Name</string>
+    <string name="stats">Stats</string>
+    <string name="select_egg">Select Egg</string>
+    <string name="hunger">Hunger</string>
 </resources>
